# percell4

./: .gitignore  CLAUDE.md  README.md  compound-engineering.local.md  hdf5_storage_guide.docx  main.py  microscopy_app_architecture.md  percell4.spec  pyproject.toml
docs/archive/: 2026-03-25-microscopy-app-architecture.md  2026-03-28-refactor-atomic-state-signals-original.md  2026-03-28-window-interactions-pre-state-change-refactor.md  2026-04-10-single-cell-thresholding-workflow-brainstorm.md  README.md
docs/brainstorms/: 2026-03-25-percell4-architecture-brainstorm.md  2026-03-27-cross-window-selection-filtering-brainstorm.md  2026-03-27-multi-roi-phasor-masks-brainstorm.md  2026-03-31-measurement-export-improvements-brainstorm.md  2026-04-03-grouped-segmentation-brainstorm.md  2026-04-04-batch-compress-brainstorm.md  2026-04-05-image-export-brainstorm.md  2026-04-05-ui-theme-consistency-brainstorm.md  2026-04-17-channel-selection-session-brainstorm.md  2026-04-17-napari-multi-label-selection-brainstorm.md  2026-04-17-phasor-roi-separate-masks-brainstorm.md
docs/plans/: 2026-03-25-feat-percell4-core-architecture-plan.md  2026-03-27-feat-cross-window-selection-filtering-plan.md  2026-03-27-feat-multi-roi-phasor-masks-plan.md  2026-03-27-feat-windows-compat-and-installer-plan.md  2026-03-28-refactor-atomic-state-signals-plan.md  2026-03-31-feat-measurement-particle-export-config-plan.md  2026-03-31-fix-mask-layers-classified-as-segmentation-plan.md  2026-04-03-feat-grouped-segmentation-plan.md  2026-04-04-feat-batch-compress-tiff-datasets-plan.md  2026-04-05-refactor-ui-theme-consistency-plan.md  2026-04-07-fix-ui-popup-positioning-and-table-colors-plan.md  2026-04-10-chore-project-folder-cleanup-plan.md  2026-04-10-feat-single-cell-thresholding-workflow-plan.md  2026-04-16-refactor-hexagonal-architecture-plan.md  2026-04-17-feat-channel-selection-session-plan.md  2026-04-17-feat-napari-multi-label-selection-plan.md  2026-04-17-feat-phasor-roi-separate-masks-plan.md  2026-04-17-fix-windows-torch-c10-dll-init-failure-plan.md  2026-04-17-refactor-eliminate-shims-and-temp-fixes-plan.md  stage0-launcher-classification.md
docs/reference/: README.md
src/percell4/: CLAUDE.md  _compat.py  _types.py  app.py  model.py  project.py  store.py
tests/: conftest.py  test_cli_pipeline.py  test_load_dataset.py  test_model.py  test_project.py  test_session.py  test_store.py  test_use_cases.py
tests/test_flim/: test_phasor.py
tests/test_gui_workflows/: conftest.py  test_base_runner_cancel.py  test_base_runner_exceptions.py  test_base_runner_interactive.py  test_base_runner_smoke.py  test_base_runner_types.py  test_config_dialog.py  test_interactive_runner.py  test_multi_select.py  test_single_cell_runner.py
tests/test_io/: test_assembler.py  test_importer.py  test_readers.py  test_scanner.py
tests/test_measure/: test_measurer.py  test_metrics.py  test_particle.py  test_thresholding.py
tests/test_segment/: test_cellpose.py  test_postprocess.py  test_roi_import.py
tests/test_workflows/: test_artifacts.py  test_channels.py  (+6 more)
todos/: 001-complete-p1-rename-tests-workflows-directory.md  002-complete-p1-simplify-intersect-channels-remove-outlier-recovery.md  003-complete-p2-cut-speculative-cellpose-settings-fields.md  004-complete-p2-threshold-qc-flag-tech-debt-note.md  005-complete-p2-dataclass-style-inconsistent-with-io-models.md  006-complete-p2-close-child-windows-hide-causes-signal-thrash.md  007-complete-p2-write-atomic-tmp-suffix-and-missing-fsync.md  008-complete-p2-build-cellpose-model-default-wrong-for-v3.md  009-complete-p2-hoist-find-objects-out-of-per-channel-loop.md  010-complete-p2-get-viewer-window-side-effect-undocumented.md  011-complete-p2-timezone-inconsistency-local-vs-utc.md  012-pending-p3-expand-test-coverage-edge-cases.md  013-pending-p3-unify-json-default-and-fix-silent-fallback.md  014-complete-p3-spell-out-cellpose-from-dict-fields.md  015-pending-p3-validate-h5-path-uniqueness.md  016-pending-p3-type-hints-and-docstrings-polish.md  017-pending-p3-narrow-launcher-file-menu-lock.md  018-pending-p3-simplify-artifacts-serialization-helpers.md  019-pending-p3-polish-tests-and-misc.md  020-complete-p1-hdf5-store-swallowed-exceptions.md  021-complete-p1-task-panels-are-hollow-delegates.md  022-complete-p2-domain-duplicates-originals.md  022-pending-p2-domain-duplicates-originals.md  023-complete-p2-hdf5-open-close-per-operation.md  023-pending-p2-hdf5-open-close-per-operation.md  024-complete-p2-two-parallel-architectures.md  024-pending-p2-two-parallel-architectures.md  025-complete-p2-undifferentiated-valueerror.md  025-pending-p2-undifferentiated-valueerror.md  026-complete-p2-inconsistent-use-case-patterns.md  026-pending-p2-inconsistent-use-case-patterns.md  027-complete-p3-session-and-adapter-minor-issues.md  027-pending-p3-session-and-adapter-minor-issues.md  028-complete-p3-re-export-shim-inconsistency.md  028-pending-p3-re-export-shim-inconsistency.md  029-complete-p2-numpy2-dtcwt-monkey-patch.md  029-pending-p2-numpy2-dtcwt-monkey-patch.md  030-complete-p2-eliminate-reexport-shims.md  030-pending-p2-eliminate-reexport-shims.md  031-complete-p2-decouple-grouped-seg-panel.md  (+3 more)
(+128 files in other folders)
